# RayTracer

./: '  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  architecture.md  notes.txt
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.clangd/index/: anistropic_phong_brdf.cpp.98BCE45C1210226C.idx  anistropic_phong_brdf.hpp.D1253CEDDC45E7A5.idx  bound.cpp.449E7C3CDC1A7C54.idx  bound.hpp.CB3C26F3545F3B37.idx  bvh_intersector.cpp.20E46091B4DDC3D2.idx  bvh_intersector.hpp.3DDCE8EC00E57F34.idx  bxdf.cpp.632609B16B8B74D4.idx  bxdf.hpp.E614BABAA42CF443.idx  camera.cpp.79ADF8E49E124493.idx  camera.hpp.CE4B2453F5742F21.idx  camera_reader.cpp.EC83D8C928B6F83B.idx  camera_reader.hpp.2B6C17DD772AAC59.idx  complex_primitive.hpp.DE7546451B9055C5.idx  constants.hpp.0F831F5585D6904E.idx  fresnel.cpp.49F198CA2A11F7E9.idx  fresnel.hpp.2F98A4F278313E0F.idx  fresnel_specular_bsdf.cpp.A6F726744C7AF7E0.idx  fresnel_specular_bsdf.hpp.9106E32A76D97A68.idx  helpers.cpp.00AD6FA411607325.idx  helpers.hpp.CEEA6D2096E445FB.idx  intersection.hpp.D062492A678784D8.idx  intersector.cpp.EBBFFD1897B6EA70.idx  intersector.hpp.8EC3BCDEF165D263.idx  json.hpp.8EF382AE73D1E7D5.idx  lambertian_brdf.cpp.48F21005BA6B3110.idx  lambertian_brdf.hpp.875D0EC4B9331078.idx  lighting_model.cpp.26FB698511674F7A.idx  lighting_model.hpp.C4EAB011E5DA697E.idx  lodepng.cpp.47BBD5BA984073C9.idx  lodepng.h.CA7D2DF0F8A75333.idx  material.hpp.5B3AB0B707E095FE.idx  matrix3.cpp.00A4889462545F0B.idx  matrix3.hpp.C207BC57C4D02CC3.idx  microfacet.cpp.2F058304A1A5534A.idx  microfacet.hpp.79378B4B739BF1D4.idx  microfacet_bsdf.cpp.7CC050726FCDA2A6.idx  microfacet_bsdf.hpp.470A010C01984C2A.idx  naive_intersector.cpp.193F437880F217A2.idx  naive_intersector.hpp.F495974C6F624F70.idx  obj_reader.cpp.EC783F3EADA4C48B.idx  (+42 more)
scenes/: cornell_box.json  cornell_box_t.json  cornell_box_tetrahedron.json  cornell_box_with_spheres2.json  example.json  test.json
scenes/benchmark/: dof.json  sampling.json  sampling2.json
scenes/bunny/: bunny.json
scenes/cornell_boxes/: cornell_box_square_light.json  shapes.json  shapes2.json  sphere.json  spheres1.json
scenes/deprecated_scenes/: spheres.json
scenes/finished_scenes/: cornell_box_tetrahedron2.json
scenes/oldscenes/: test.json
scenes/textures/: redbluedragon.json  refraction_demonstration.json  refractiondragon.json  spheretexture.json
scenes/to-render/: cornell_box_tetrahedron.json
src/: advanced_lighting_model.cpp  advanced_lighting_model.hpp  camera.hpp  cameras.cpp  cameras.hpp  color.cpp  color.hpp  constants.hpp  helpers.cpp  helpers.hpp  intersection.hpp  intersector.hpp  lighting_model.hpp  lighting_models.cpp  lighting_models.hpp  material.hpp  matrix3.cpp  matrix3.hpp  naive_intersector.cpp  naive_intersector.hpp  perspective_camera.cpp  perspective_camera.hpp  point_light.hpp  primitive.hpp  ray.hpp  scene.cpp  scene.hpp  simple_lighting_model.cpp  simple_lighting_model.hpp  sphere.cpp  sphere.hpp  surface.hpp  tracer.cpp  triangle.cpp  triangle.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp
src/camera/: camera.cpp  camera.hpp  cameras.cpp  cameras.hpp  orthographic_camera.cpp  (+3 more)
tests/: material_tests.cpp  random_speed_test.cpp  tests.cpp  vector3_eigen_speed_test.cpp  vector3_test.cpp
(+168 files in other folders)
